--- a/aulas 13 - 15/aula 14/css/estilo.css
+++ b/aulas 13 - 15/aula 14/css/estilo.css
@@ -20,7 +20,24 @@ body {
     border-radius: 20px;
     background-color: aliceblue;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.589);
+    display: flex;
+    justify-content: center;
+
 }
+
+.box-section-2 {
+    display: flex;
+    border-radius: 20px;
+
+}
+
+.box-section-2 .fill {
+    object-fit: fill;
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.589); ;
+}
+
+
 
 footer p {
     color: white;
