--- a/aulas 13 - 15/aula 14/css/estilo.css
+++ b/aulas 13 - 15/aula 14/css/estilo.css
@@ -2,9 +2,9 @@ body {
     background-color: rgb(107,107,241);
     font: normal 15pt Arial;
     display: flex;
-    /* height: 100vh;
+    height: 100vh;
     width: 100vw;
-    justify-content: center; */
+    justify-content: space-around;
     flex-direction: column;
     align-items: center;
 }
@@ -22,18 +22,21 @@ body {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.589);
     display: flex;
     justify-content: center;
+}
 
+.box-section-1 {
+    margin: 35px;
+    text-align: center;
 }
 
 .box-section-2 {
     display: flex;
     border-radius: 20px;
-
 }
 
 .box-section-2 .fill {
     object-fit: fill;
-    border-radius: 20px;
+    border-radius: 120px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.589); ;
 }
 
