--- a/aula 12/exercicio 3/css/estilo.css
+++ b/aula 12/exercicio 3/css/estilo.css
@@ -2,19 +2,20 @@ body {
     background-color: rgb(107,107,241);
     font: normal 15pt Arial;
     display: flex;
-    /* height: 100vh;
+    height: 100vh;
     width: 100vw;
-    justify-content: center; */
+    justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 
 .cabecalho .titulo-principal {
     color: white;
+    margin-bottom: 10px;
 }
 
 .box-principal {
-    height: 400px;
+    height: 100%;
     width: 400px;
     border: 2px solid white;
     border-radius: 20px;
@@ -22,7 +23,37 @@ body {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.589);
 }
 
+.box-principal .secao-dividir .box-section-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    margin: 10px 0;
+}
+
+.box-principal .secao-dividir .box-section-1 .ano-nasc {
+    margin-bottom: 5px;
+}
+
+.box-principal .secao-dividir .box-section-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    margin-bottom: 10px;
+}
+
+.box-principal .secao-dividir .box-section-2 .botao {
+    padding: 5px 30px;
+    background-color: rgb(107,107,241);
+    color: white;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
 footer p {
     color: white;
+    margin-top: 10px;
 }
 
