--- a/aula 14/exercicio 5/css/estilo.css
+++ b/aula 14/exercicio 5/css/estilo.css
@@ -2,9 +2,9 @@ body {
     background-color: rgb(107,107,241);
     font: normal 15pt Arial;
     display: flex;
-    /* height: 100vh;
+    height: 100vh;
     width: 100vw;
-    justify-content: center; */
+    justify-content: center;
     flex-direction: column;
     align-items: center;
 }
