estrutuacao do CSS e HTML do exercicio 4 para inicio do script

--- a/aula 14/exercicio 4/css/estilo.css
+++ b/aula 14/exercicio 4/css/estilo.css
@@ -22,6 +22,14 @@ body {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.589);
 }
 
+.box-principal .box-section-1 {
+    height: 350px;
+    width: 390px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 footer p {
     color: white;
 }
